--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,14 @@ body {
 	font-family: 'Montserrat', sans-serif;
 }
 .color-button{
-	width:20%;
+	width:70px;
+	height:70px;
+	margin:10px;
 	overflow:hidden;
+	cursor: pointer;
+	border: none;
+	border-radius: 50%;
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
 }
 .line-break{
     display:block;
@@ -53,4 +59,12 @@ header{
 }
 #color-section{
     display:none;
+}
+.gen-button{
+	border: none;
+	border-radius: 10%;
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
+}
+button:active{
+	box-shadow: none;
 }
