--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,30 @@
+* {
+	font-family: 'Poppins', sans-serif;
+}
+#topnav {
+	overflow: hidden;
+}
+.profile {
+	float:right;
+	display:flex;
+	justify-content:center;
+	align-items: center
+}
+#topnav span {
+	float: right;
+	text-align: center;
+	padding: 14px 10px;
+	text-decoration: none;
+	font-size: 17px;
+}
+.profile:hover {
+	background-color: #ddd;
+	color: black;
+}
+#topnav span.active {
+	background-color: #04AA6D;
+	color: white;
+}
 body {
 	background: rgb(244,244,244);
 	color: black;
@@ -5,7 +32,12 @@ body {
 	letter-spacing: 2px;
 	margin: 0;
 	padding: 0;
-	font-family: 'Montserrat', sans-serif;
+}
+.profilepic{/* this should be adjusted */
+	width:40px;
+	height:40px;
+	margin-top:auto;
+	margin-bottom:auto;
 }
 .color-button{
 	width:70px;
@@ -41,9 +73,9 @@ header{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	height: 85vh;
 }
-#main {
+.main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
